Initialize DB connection
